Changelog
=========

3.1.dev0 - (unreleased)
-----------------------

3.0 - (2017-12-11)
------------------
* Feature: fullscreen mode for map iframe in landitem view
* Update: Land item view: Change back to Map view as default selected tab.
  [GhitaB #90422 #90655]

2.10 - (2017-12-07)
------------------
* Improve login and reset password pages with info for EIONET members
  [GhitaB #90575]

2.9 - (2017-11-23)
------------------
* Fix: Empty zip files. Smarter checks when deciding to build or not.
  [batradav #90046]

2.8 - (2017-11-21)
------------------
* Fix: non-validated content tag
* Fix: download event with section name instead of filename
* Fix: "select all" checkbox only for searched content, if active search
* Update: move "login" message above table, strong and centered
  [batradav #89915 #90054 #89982]

2.7 - (2017-11-17)
------------------
* Fix: pre-fill search fields if "selected:list" GET param is present.
  [batradav #89774]

2.6 - (2017-11-16)
------------------
* Fix: send selected land files in POST.
* Fix: automatically check land files passed in "selected:list" GET param.
* Fix: "download" tab as default view for land item.
  [batradav #89774]

2.5 - (2017-11-01)
------------------
* Release land downloads and performance improvements.
  [batradav #88377 #88278]

2.5rc7 - (2017-10-16)
---------------------
* Fix: disable download button if "non-validated" checkbox is unchecked.
* Update: download ready email template.
* Fix: grab download files according to Land File URL, relative to `src` dir.
  [batradav #88377]

2.5rc6 - (2017-10-12)
---------------------
* Fix: _delayed_read_metadata for everything but _download_executor.
* Fix: email notifications and addressing users by name.
  [batradav #88377]

2.5rc5 - (2017-10-10)
---------------------
* Fix: Retry counter for _read_metadata - increasing wait time.
  [batradav #88377]

2.5rc4 - (2017-10-10)
---------------------
* Fix: Retry counter for _read_metadata.
  [batradav #88377]
