@@ -3,6 +3,9 @@ Changelog
 
 3.1.dev0 - (unreleased)
 -----------------------
+* Feature: added LandItem dcterms:description override when description is
+  missing
+  [tiberich #90546]
 
 3.0 - (2017-12-11)
 ------------------
